同步游戏逻辑、前端素材和文档并固定 Lombok 版本